# netbox-atlassian

./: CHANGELOG.md  README.md  pyproject.toml
examples/: README.md  cab-change-request.confluence  lessons-learned.confluence  mop-decommission.confluence  mop-firmware-upgrade.confluence  mop-maintenance-reset.confluence  mop-network-change.confluence  mop-upgrade-with-phases.confluence  rca-root-cause-analysis.confluence  sow-project.confluence
netbox_atlassian/: __init__.py  atlassian_client.py  forms.py  models.py  navigation.py  urls.py  views.py
netbox_atlassian/migrations/: 0001_initial.py  0002_rename_model.py  0003_documenttemplate.py  0004_sample_templates.py  0005_fix_contacts_dedup.py  0006_conditional_device_fields.py  0007_fix_bracket_placeholders.py  0008_cab_single_table.py  0009_remove_document_type.py  0010_additional_templates.py  0011_fix_checkbox_syntax.py  0012_confluence_parent_page.py  0013_remove_h1_from_templates.py  0014_add_toc_and_closeout.py  0015_update_cab_template.py  0016_consolidate_device_tables.py  0017_add_interfaces_and_connections.py  0018_add_rca_and_lessons_learned.py
netbox_atlassian/sample_templates/: mop_network_change.confluence
netbox_atlassian/templates/netbox_atlassian/: device_tab.html  endpoint_tab.html  settings.html  tab_content.html  template_delete.html  template_detail.html  template_edit.html  template_generate.html  template_list.html  vm_tab.html
